cloud/k3s/backend/jsxjp/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsxjp
  labels:
    app: jsxjp
    component: deployment
spec:
  selector:
    matchLabels:
      app: jsxjp
  template:
    metadata:
      labels:
        app: jsxjp
        component: workload
    spec:
      containers:
      - name: jsxjp
        image: ghcr.io/jobscale/jsxjp
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jsxjp
  labels:
    app: jsxjp
    component: service
spec:
  selector:
    app: jsxjp
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsxjp
  labels:
    app: jsxjp
    component: ingress
spec:
  ingressClassName: traefik
  tls:
  - secretName: jsxjp-tls
    hosts: [ "jsx.jp", "www.jsx.jp", "x.jsx.jp", "mail.jsx.jp" ]
  rules:
  - host: jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jsxjp
            port:
              number: 80
  - host: www.jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jsxjp
            port:
              number: 80
  - host: x.jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jsxjp
            port:
              number: 80
  - host: mail.jsx.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jsxjp
            port:
              number: 80
